@@ -6,7 +6,7 @@
 use warnings FATAL => qw(all);
 
 use ExtUtils::testlib;
-use Test::More tests => 95 ;
+use Test::More tests => 96 ;
 use Test::Exception ;
 use Config::Model ;
 use Config::Model::Value;
@@ -99,12 +99,18 @@ $model ->create_config_class
 			   value_type => 'string',
 			   match => '^foo\d{2}$',
 			 },
+                prd_test_action => { type => 'leaf',
+                                     value_type => 'string',
+                                   } ,
 		prd_match => { type => 'leaf',
                                value_type => 'string',
-			       grammar => q!token (oper token)(s?)
+			       grammar => q^token (oper token)(s?) 
 			                    oper: 'and' | 'or'
-			                    token: 'Apache' | 'CC-BY' | 'Perl'
-                                           !,
+			                    token: 'Apache' | 'CC-BY' | 'Perl' 
+			                       {my $v = $arg[0]->grab("! prd_test_action")->fetch ;
+			                        $return = ($v =~ /$item[0]/) ; 
+			                       }
+                                           ^,
 			 },
 	      ] , # dummy class
   ) ;
@@ -362,6 +368,9 @@ is($match->fetch, 'foo42',"test stored matching value") ;
 my $prd_match = $root->fetch_element('prd_match') ;
 throws_ok { $match->store('bar');} 'Config::Model::Exception::WrongValue',
     'match value: test for non matching grammar';
+throws_ok { $match->store('Perl');} 'Config::Model::Exception::WrongValue',
+    'match value: test for non matching grammar';
+$root->fetch_element('prd_test_action')->store('Perl CC-BY Apache');
 
 foreach my $prd_test (('Perl','Perl and CC-BY', 'Perl and CC-BY or Apache')) {
     $prd_match->store($prd_test) ;
