@@ -253,6 +253,13 @@
                            value_type => 'string',
                            match => '^foo\d{2}$',
                          },
+               prd_match => { type => 'leaf',
+                               value_type => 'string',
+                               grammar => q!token (oper token)(s?)
+                                            oper: 'and' | 'or'
+                                            token: 'Apache' | 'CC-BY' | 'Perl'
+                                           !,
+                            },
                ## too difficult to correctly test Augeas here
                'sshd_augeas' 
                => {
