@@ -146,13 +146,16 @@ sub read_all {
         croak __PACKAGE__," read_all: unknown config dir $dir";
     }
 
+    my $root_model_file = $model ;
+    $root_model_file =~ s!::!/!g ;
+    
     my @files ;
     my $wanted = sub { 
         my $n = $File::Find::name ;
         push @files, $n if (-f $_ and not /~$/ 
                             and $n !~ /CVS/
                             and $n !~ m!.svn!
-                            and $n =~ /\b$model/
+                            and $n =~ /\b$root_model_file/
                            ) ;
     } ;
     find ($wanted, $dir ) ;
@@ -222,7 +225,8 @@ sub read_all {
     $model_obj->instance->push_no_value_check(qw/store fetch type/) if $force_load;
 
     $logger->info("loading all extracted data in Config::Model::Itself");
-    $model_obj->load_data( {class => \%read_models} ) ;
+    # load with a array ref to avoid warnings about missing order
+    $model_obj->load_data( {class => [ %read_models ] } ) ;
 
     $model_obj->instance->pop_no_value_check() if $force_load;
 
