@@ -31,6 +31,7 @@
        => {
 	   type => 'hash',
 	   index_type => 'string' , 
+	   ordered => 1,
 	   cargo => { type => 'node',
 		      config_class_name => 'Itself::Class' ,
 		    },
