@@ -76,7 +76,10 @@
 	  cargo => { type => 'leaf',
 		     value_type => 'uniline' 
 		   },
-	  description => "Specifies the path to the value elements that drive the change of this node. Each key of the has is a variable name used in the 'rules' parameter. The value of the hash is a path in the configuration tree",
+	  description => "Specifies the path to the value elements that drive the "
+			 ."change of this node. Each key of the has is a variable name used "
+			 ."in the 'rules' parameter. The value of the hash is a path in the "
+			 ."configuration tree",
 	 },
 
       'morph' => 
@@ -94,7 +97,9 @@
 		       },
 		  }
 	     },
-	  description => "When set, a recurse copy of the value from the old object to the new object will be attemped. When a copy is not possible, undef values will be assigned.",
+	  description => "When set, a recurse copy of the value from the old object "
+	       ."to the new object will be attemped. When a copy is not possible, "
+		    ."undef values will be assigned.",
 	 },
 
       # end warp elements for warped_node
@@ -105,6 +110,7 @@
       => { type => 'leaf',
 	   level      => 'hidden' ,
 	   value_type => 'uniline',
+	   experience => 'advanced',
 	   warp => { follow => { t  => '- type',
 				 vt => '- value_type',
 			       },
@@ -116,7 +122,10 @@
 			     },
 			]
 		   },
-	   description => "points to an array or hash element in the configuration tree using the path syntax. The available choice of this reference value (or check list)is made from the available keys of the pointed hash element or the values of the pointed array element.",
+	   description => "points to an array or hash element in the configuration "
+			 ."tree using the path syntax. The available choice of this "
+			 ."reference value (or check list)is made from the available "
+			 ."keys of the pointed hash element or the values of the pointed array element.",
 	 },
 
       'computed_refer_to' 
@@ -125,6 +134,7 @@
 		       vt => '- value_type',
 		     },
 	   level => 'hidden',
+	   experience => 'master',
 	   'rules'
 	   => [ '   $t  eq "check_list" 
                  or $vt eq "reference"  '
@@ -139,6 +149,7 @@
       'compute' 
       => { type => 'warped_node',
 	   level => 'hidden',
+	   experience => 'advanced',
 
 	   follow => { t  => '- type',},
 	   'rules' => [ '$t  eq "leaf"'
@@ -153,6 +164,7 @@
       'migrate_from' 
       => { type => 'warped_node',
 	   level => 'hidden',
+	   experience => 'advanced',
 
 	   follow => { t  => '- type',},
 	   'rules' => [ '$t  eq "leaf"'
