@@ -1,5 +1,5 @@
 name    = Config-Model-TkUI
-version = 1.309
+version = 1.310
 author  = Dominique Dumont
 license = LGPL_2_1
 copyright_holder = Dominique Dumont
